adding some content and changing images

--- a/my order.css
+++ b/my order.css
@@ -10,7 +10,9 @@ header {
     font-size: 1.75rem;
     font-weight: bold;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:#ff6347
+    color:#ff6347;
+    display: flex;
+    position: fixed;
 }
 
 .navbar-nav .nav-link {
@@ -34,7 +36,7 @@ header {
 }
 
 .order-icon {
-    width: 50px;
+    width: 70px;
     margin-right: 10px;
     height: 70px;
 }
@@ -85,8 +87,16 @@ footer .fa-linkedin {
 
 footer .text-center p {
     margin: 0;
+    
 }
 
 footer .container {
-    max-width: 960px;
+    max-width: 1360px;
+
 }
+
+.color{
+    background-color: gray;
+    border: 2px solid black;
+}
+
