--- a/my order.css
+++ b/my order.css
@@ -1,5 +1,8 @@
 body {
     font-family: Arial, sans-serif;
+    background-image: url('back.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 header {
