--- a/Orders.css
+++ b/Orders.css
@@ -6,6 +6,9 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #f2f2f2;
+    background-image: url("food.jpg");
+    background-repeat: no-repeat;
+    background-size: 1550px 1000px;
 }
 .signup-container {
     background-color: #fff;
@@ -29,7 +32,7 @@ body {
 .signup-container button {
     width: 100%;
     padding: 10px;
-    background-color: #ff6600;
+    background-color:red;
     color: #fff;
     border: none;
     border-radius: 5px;
