--- a/order.css
+++ b/order.css
@@ -1,96 +1,85 @@
 body {
-    font-family: 'Arial', sans-serif;
     background-color: #f8f9fa;
+    font-family: Arial, sans-serif;
     background-image: url(back.jpg);
-   background-size: cover;
-   background-repeat: no-repeat;
-    margin: 0;
-    padding: 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 1.5;
 }
 
-header {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.card {
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
 }
 
-
-.navbar-brand {
-    font-size: 1.75rem;
+.saved-address h6, .add-new-address h6 {
+    font-size: 16px;
     font-weight: bold;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:#ff6347;
-    display: flex;
-    position: fixed;
+   
 }
 
-
-.navbar-nav .nav-link {
-    font-size: 1rem;
-    color: black;
+.saved-address p, .add-new-address p {
+    margin: 0;
+    font-size: 14px;
+    color: #6c757d;
     
 }
 
-
-.navbar-nav .nav-link:hover {
-    color: #ff6347;
+.saved-address span {
+    font-size: 12px;
+    color: #6c757d;
 }
 
-.navbar-nav .nav-link i {
-    font-size: 1.2rem;
+.saved-address button, .add-new-address button {
+    font-size: 14px;
 }
 
-.cart-item {
-    padding: 15px 0;
-    border-bottom: 1px solid #dee2e6;
-    
+.add-new-address img {
+    width: 50px;
+    height: 50px;
+    border-radius: 8px;
 }
 
-.cart-item img {
-    width: 80px;
-    height: 80px;
-    border-radius: 10px;
-    margin-right: 20px;
-}
-
-.cart-summary {
-    background-color: #ffffff;
-    border: 1px solid #dee2e6;
-    border-radius: 10px;
-}
-
-.cart-summary h4 {
-    margin-bottom: 20px;
-}
-
-.cart-summary .btn {
-    background-color: #ff5722;
+.list-group-item {
     border: none;
+    padding: 10px 0;
+}
+
+.list-group-item h6 {
+    font-size: 16px;
+    margin: 0;
+}
+
+.list-group-item small {
+    color: #6c757d;
+}
+
+.form-check-label {
+    font-size: 14px;
+}
+
+.form-check p {
+    font-size: 12px;
+    margin-top: 5px;
+}
+.shadow {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.border-left-primary {
+    border-left: 4px solid #337ab7;
     
 }
 
-
-.cart-summary .btn:hover {
-    background-color: #e64a19;
-
+.border-left-secondary {
+    border-left: 4px solid #666;
 }
-
-.item-actions{
-    display: flex;
-    align-items: center;
+.heading {
+    font-size: 30px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-variant: small-caps;
+    margin-top: 45px;
+    margin-left: 120px;
 }
-.remove-btn ,.track-btn{
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    
-}
-.remove-btn{
-    background-color: red;
-    color: white;
-}
-.track-btn{
-    background-color: blue;
-    color: white;
-}
-
-
-
