--- a/track.css
+++ b/track.css
@@ -3,10 +3,19 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-    background-image: url(light\ food.jpg);
+    margin-top: 120px;
    display: flex;
    margin-left: 400px;
 }
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
 
 .order-status {
     padding: 20px;
@@ -86,6 +95,10 @@ body {
     cursor: pointer;
     margin-top: 20px;
 }
+.img{
+    height: 180px;
+    width: 200px;
+}
 
 .tracking-map {
     padding: 20px;
@@ -142,4 +155,28 @@ body {
     position: absolute;
     bottom: -15px;
     right: -15px;
+}
+.order-status, .tracking-map {
+    position: relative;
+    z-index: 1; 
+    background-color: rgba(255, 255, 255, 1.5); 
+    padding: 20px;
+    border-radius: 8px; 
+}
+
+
+.confirm-btn, .back-btn {
+    background-color: #007bff;
+    color: white;
+    
+    border: none;
+    padding: 10px 20px;
+    margin: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.confirm-btn:hover, .back-btn:hover {
+    background-color: red;
+    color: white;
 }
