--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,60 @@
+nav.navbar.navbar-expand-lg.navbar-light.bg-light {
+    background: #fff !important;
+    border-bottom: 1px solid #ddd;
+    margin: 0px auto;
+    width: 100%;
+    padding: 20px 0;
+    Z-INDEX: 1;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light img {
+    margin-right: 15px;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light strong {
+    color: #fd0301;
+}
+ul.navbar-nav.ms-auto li a:hover {
+    color: #fd0301 !important;
+}
+ul.navbar-nav.ms-auto li a.nav-link.active {
+    color: #fd0301 !important;
+}
+ul.navbar-nav.ms-auto li a {
+    font-size: 16px;
+    color: #000 !important;
+    font-weight: 500;
+	 font-family: 'Poppins', sans-serif;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light li.nav-item:last-child {
+    background: #FD0301;
+    padding: 4px 30px;
+    margin-left: 20px;
+    color: #fff !important;
+	border-radius:6px;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light li.nav-item:last-child:hover {
+    background: #000;
+    transition: 0.3s;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light li.nav-item:last-child a {
+    color: #fff !important;
+    text-transform: capitalize;
+    font-weight: 700;
+}
+ul.navbar-nav.ms-auto li {
+    padding: 0 7px;
+    text-transform: uppercase;
+}
+ul.navbar-nav.ms-auto li {
+    text-transform: capitalize;
+}
+
+nav.navbar.navbar-expand-lg.navbar-light.bg-light {
+    border-top: 5px solid #fd0301;
+    padding: 35px 0;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light strong {
+    font-size: 28px;
+}
 body {
     font-family: 'Arial', sans-serif;
 }
@@ -40,4 +97,87 @@ body {
 
 .navbar-brand img {
     margin-right: 10px;
+}
+ul.social-icon {
+    display: flex;
+    list-style: none;
+    gap: 10px;
+    float: right;
+}
+.footer-top .col-md-5 strong {
+    font-size: 28px;
+}
+.footer-top {
+    background: #fff7f5;
+    padding: 50px 0;
+}
+.footer-top p {
+    margin-top: 20px;
+    font-size: 16px;
+	 font-family: 'Poppins', sans-serif;
+    line-height: 26px;
+}
+.footer-top h3 {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    margin-bottom: 15px;
+}
+.footer-top strong {
+    color: #f60002;
+}
+.footer-top ul li a {
+    color:#000;
+}
+.footer-top ul {
+    list-style: none;
+    padding-left: 0;
+	 font-family: 'Poppins', sans-serif;
+}
+.footer-top ul li a {
+    text-decoration: none;
+}
+.footer-top ul li {
+    font-size: 18px;
+    line-height: 38px;
+    font-weight: 400;
+}
+.footer-bottom p {
+    font-size: 20px;
+    line-height: 24px;
+	 font-family: 'Poppins', sans-serif;
+    color: #003F5D;
+}
+.footer-top .col-md-3 {
+    width: 20%;
+}
+.footer-top .col-md-6 {
+    width: 60%;
+}
+.footer-top ul li a:hover {
+    color: #fd0301;
+    transition: 0.3s;
+}
+.footer-bottom .row {
+    padding: 0 15px;
+}
+.footer-bottom {
+    background: #f60002;
+    padding: 20px 0;
+}
+.footer-bottom .row {
+    align-items: center;
+}
+.footer-top strong.fitness {
+    font-size: 25px;
+}
+.footer-top img {
+    margin-right: 10px;
+}
+.footer-bottom p {
+    margin-bottom: 0;
+	color:#fff;
+}
+.footer-bottom ul.social-icon {
+    margin-bottom: 0;
 }
