--- a/menu.css
+++ b/menu.css
@@ -10,15 +10,77 @@
     transition: background-color 0.3s ease;
     
 }
+nav.navbar.navbar-expand-lg.navbar-light.bg-light {
+    background: #fff !important;
+    border-bottom: 1px solid #ddd;
+    margin: 0px auto;
+    width: 100%;
+    padding: 20px 0;
+    Z-INDEX: 1;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light img {
+    margin-right: 15px;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light strong {
+    color: #fd0301;
+}
+ul.navbar-nav.ms-auto li a:hover {
+    color: #fd0301 !important;
+}
+ul.navbar-nav.ms-auto li a.nav-link.active {
+    color: #fd0301 !important;
+}
+ul.navbar-nav.ms-auto li a {
+    font-size: 16px;
+    color: #000 !important;
+    font-weight: 500;
+	 font-family: 'Poppins', sans-serif;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light li.nav-item:last-child {
+    background: #FD0301;
+    padding: 4px 30px;
+    margin-left: 20px;
+    color: #fff !important;
+	border-radius:6px;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light li.nav-item:last-child:hover {
+    background: #000;
+    transition: 0.3s;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light li.nav-item:last-child a {
+    color: #fff !important;
+    text-transform: capitalize;
+    font-weight: 700;
+}
+ul.navbar-nav.ms-auto li {
+    padding: 0 7px;
+    text-transform: uppercase;
+}
+ul.navbar-nav.ms-auto li {
+    text-transform: capitalize;
+}
+
+nav.navbar.navbar-expand-lg.navbar-light.bg-light {
+    border-top: 5px solid #fd0301;
+    padding: 35px 0;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-light strong {
+    font-size: 28px;
+}
 .image-container:hover {
     background-color: #e0e0e0; 
 }
+.carousel-inner img {
+    max-height: 650px; 
+    object-fit: cover;
+    width: 100%;
+  }
 
 .circular-image {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 5px solid #333; 
+    border: 5px solid gray;
     object-fit: cover;
     background-color: orange;
 }
@@ -32,4 +94,190 @@ h3 {
 .image-container:hover h3 {
     color: #ff6347; 
 }
+ul.social-icon {
+    display: flex;
+    list-style: none;
+    gap: 10px;
+    float: right;
+    
+}
+
+
+.footer-top {
+    background: #fff7f5;
+    padding: 30px 0;
+    margin-top: 50px;
+   
+}
+
+
+.footer-top p {
+    margin-top: 10px;
+    font-size: 16px;
+	 font-family: 'Poppins', sans-serif;
+    line-height: 24px;
+	color:#0B154F;
+}
+.footer-top h3 {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    margin-bottom: 10px;
+    color: black;
+}.footer-top h2 {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    margin-bottom: 10px;
+    color:#fd0301;
+}
+.footer-top strong {
+    color:#fd0301;
+}
+.footer-top ul li a {
+    color:#0B154F;
+}
+.footer-top ul {
+    list-style: none;
+    padding-left: 0;
+	 font-family: 'Poppins', sans-serif;
+}
+.footer-top ul li a {
+    text-decoration: none;
+}
+.footer-top ul li {
+    font-size: 18px;
+    line-height: 34px;
+    font-weight: 400;
+}
+.footer-bottom p {
+    font-size: 20px;
+    line-height: 22px;
+	 font-family: 'Poppins', sans-serif;
+    color: #003F5D;
+}
+.footer-top .col-md-3 {
+    width: 20%;
+}
+.footer-top .col-md-6 {
+    width: 60%;
+}
+.footer-top ul li a:hover {
+    color: #fd0301;
+    transition: 0.3s;
+}
+.footer-bottom .row {
+    padding: 0 15px;
+}
+.footer-bottom {
+    background:#fd0301;
+    padding: 10px 0;
+}
+.footer-bottom .row {
+    align-items: center;
+}
+.footer-top strong.fitness {
+    font-size: 25px;
+}
+.footer-top img {
+    margin-right: 10px;
+}
+.footer-bottom p {
+    margin-bottom: 0;
+	color:white;
+    
+}
+.footer-bottom ul.social-icon {
+    margin-bottom: 0;
+}
+
+
+
+
+section#menu {
+    padding: 2rem;
+    background-color: #f9f9f9;
+}
+
+.menu {
+    margin-bottom: 2rem;
+}
+
+.menu h3 {
+    background-color: #fd0301;
+    color: black;
+    padding: 0.5rem;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.menu ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.menu ul li {
+    border-bottom: 1px solid #ddd;
+    padding: 1rem 0;
+}
+
+.menu ul li h4 {
+    margin: 0;
+}
+#quantityInput {
+    width: 50px;
+    padding: 5px;
+    margin: 10px 0;
+    text-align: center;
+}
+
+
+.menuul li p {
+    margin: 0.5rem 0;
+}
+
+.menu ul li span {
+    font-weight: bold;
+    color: black;
+}
+.menu-img-right {
+    
+    display:flex;
+    float: right;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+    width: 150px; 
+    height: auto;
+}
+
+
+
+
+
+.menu-container {
+    display: flex;
+    flex-direction: row;
+    gap: 20px; /* Space between menu items */
+}
+
+.menu-item {
+    border: 1px solid #ddd;
+    padding: 15px;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
